Bug 441370 - KDE Plasma cursor is not displayed over docker area right after painting on 5.0 beta1
Summary: KDE Plasma cursor is not displayed over docker area right after painting on 5...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 5.0.0-beta1
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Emmet O'Neill
URL:
Keywords: regression
: 443694 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-08-22 14:37 UTC by Wojtek Trybus
Modified: 2021-12-14 01:50 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wojtek Trybus 2021-08-22 14:37:34 UTC
SUMMARY
Kubuntu 20.04/KDE Plasma specific. No cursor is displayed over docker area after painting on canvas. To make it visible, you need to click on docker area - bug happens every time you paint anything on canvas. 

STEPS TO REPRODUCE
1. Paint a line
2. Hover over the docker area

OBSERVED RESULT
No cursor is displayed unless clicked on docker area
Operating System: Kubuntu 20.04
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.68.0
Qt Version: 5.12.8
Kernel Version: 5.4.0-81-generic
OS Type: 64-bit
Processors: 16 × AMD Ryzen 7 2700 Eight-Core Processor
Memory: 31,4 GiB
Comment 1 Halla Rempt 2021-08-23 09:07:13 UTC
Is this with the appimage? What are your cursor settings in Krita? With the default no cursor/preview outline, I cannot reproduce this on my plasma 5.22.4 system with Qt 5.15.3, testing with the appimage which has its own version of Qt 5.12.
Comment 2 Wojtek Trybus 2021-08-23 17:35:06 UTC
I think I found the true cause behind this bug.
It's not related to just painting a line, but to hiding a pop-up palette using the tablet stylus, without picking a brush.

NEW STEPS TO REPRODUCE:
1. Invoke pop-up palette (RMB)
2. Hide pop-up palette with stylus, without picking a brush - click with any of stylus buttons outside the pop-up.
3. Hover over docker area

This does not happen when you pick a preset using the pop-up, or you use mouse or keyboard (remapped canvas input) to hide it.
Clicking at the docker regains the cursor, until next time you cancel a pop-up.

Turns out, I use this palette a lot, and haven't thought about using the mouse earlier while testing. I used appimage.
Comment 3 Bug Janitor Service 2021-08-24 04:36:54 UTC
Thanks for your comment!

Automatically switching the status of this bug to REPORTED so that the KDE team
knows that the bug is ready to get confirmed.

In the future you may also do this yourself when providing needed information.
Comment 4 Halla Rempt 2021-09-01 10:02:18 UTC
Okay, with this I can confirm the issue.
Comment 5 Wojtek Trybus 2021-10-14 07:27:49 UTC
*** Bug 443694 has been marked as a duplicate of this bug. ***
Comment 6 Eoin O'Neill 2021-12-13 21:50:43 UTC
To clarify, this only happens in the appimage (or on ubuntu systems 20.04 and before, as it is the same environment that we are building our appimages in.)

I'll try to track down the origin of this inconsistency with the original implementation.
Comment 7 Eoin O'Neill 2021-12-13 22:04:52 UTC
Git commit e5979fc3de58eef7e760645ba6e1c647903fd692 by Eoin O'Neill.
Committed on 13/12/2021 at 22:04.
Pushed by eoinoneill into branch 'master'.

Fix regression where cursor would stay hidden after closing popup palette on certain systems.

Users would right click with mouse and then close with tablet pen, which on certain QT systems
would cause the cursor to stay hidden. I guess on newer versions of QT, not "accepting" an input
is somehow corrected or acommodated for when it comes to cursor change operations.

Adding a "setAccepted" call after hiding an open popup palette seemed to fix this issue.

M  +1    -1    libs/ui/input/kis_input_manager.cpp

https://invent.kde.org/graphics/krita/commit/e5979fc3de58eef7e760645ba6e1c647903fd692
Comment 8 Emmet O'Neill 2021-12-14 01:50:19 UTC
Git commit 4979301cc28de46d4cd1df3d30b5a547f0647124 by Emmet O'Neill, on behalf of Eoin O'Neill.
Committed on 14/12/2021 at 01:50.
Pushed by emmetoneill into branch 'krita/5.0'.

Fix regression where cursor would stay hidden after closing popup palette on certain systems.

Users would right click with mouse and then close with tablet pen, which on certain QT systems
would cause the cursor to stay hidden. I guess on newer versions of QT, not "accepting" an input
is somehow corrected or acommodated for when it comes to cursor change operations.

Adding a "setAccepted" call after hiding an open popup palette seemed to fix this issue.


(cherry picked from commit e5979fc3de58eef7e760645ba6e1c647903fd692)

M  +1    -1    libs/ui/input/kis_input_manager.cpp

https://invent.kde.org/graphics/krita/commit/4979301cc28de46d4cd1df3d30b5a547f0647124